--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -41,3 +41,19 @@
     transition: all 500ms ease-in;
   }
   
+  body{
+    padding: 1em;
+    text-align: center;
+    font-family: "Gill sans", sans-serif;
+    width: 80%;
+    margin: 0 auto;
+  }
+  h1{
+    margin: 1em 0;
+    border-bottom: 1px dashed;
+    padding-bottom: 1em;
+    font-weight: lighter;
+  }
+  p{
+    font-style: italic;
+  }
