--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,76 +1,94 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 #root {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .App {
-    width: 800px;
+  width: 1200px;
 }
 
-.post{
-    display: flex;
-    padding: 1.5rem;
-    border: .2rem solid teal;
-    margin-top: 1.5rem;
-    justify-content: space-between;
-    align-items: center;
+.post {
+  display: flex;
+  padding: 1.5rem;
+  border: .2rem solid teal;
+  margin-top: 1.5rem;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .remove-btn {
-    margin-right: 0.5rem;
-  }
-  
-  .post-enter {
-    transform: translateX(-350px);
-  }
-  .post-enter-active {
-    transform: translateX(0px);
-    transition: all 500ms ease-in;
-  }
-  .post-exit {
-    opacity: 1;
-  }
-  .post-exit-active {
-    transform: translateX(-350px);
-    transition: all 500ms ease-in;
-  }
-  
-  body{
-    padding: 1em;
-    text-align: center;
-    font-family: "Gill sans", sans-serif;
-    width: 80%;
-    margin: 0 auto;
-  }
-  h1{
-    margin: 1em 0;
-    border-bottom: 1px dashed;
-    padding-bottom: 1em;
-    font-weight: lighter;
-  }
-  p{
-    font-style: italic;
-  }
+  margin-right: 0.5rem;
+}
 
-  .page__wrapper{
-    margin-top: 3rem;
-    display: flex; 
-  }
+.post-enter {
+  transform: translateX(-350px);
+}
 
-  .page {
-    padding: 1rem;
-    border: 1px solid teal;
-    cursor: pointer;
-    
-  }
+.post-enter-active {
+  transform: translateX(0px);
+  transition: all 500ms ease-in;
+}
 
-  .page__current {
-    border: .2rem solid orange;
-    font-weight: bold;
-  }
+.post-exit {
+  opacity: 1;
+}
+
+.post-exit-active {
+  transform: translateX(-350px);
+  transition: all 500ms ease-in;
+}
+
+body {
+  padding: 1em;
+  text-align: left;
+  font-family: "Gill sans", sans-serif;
+  width: 80%;
+  margin: 0 auto;
+}
+
+h1 {
+  margin: 1em 0;
+  padding-bottom: 1em;
+  font-weight: lighter;
+}
+
+p {
+  font-style: italic;
+}
+
+.page__wrapper {
+  margin-top: 3rem;
+  display: flex;
+}
+
+.page {
+  padding: 1rem;
+  border: 1px solid teal;
+  cursor: pointer;
+
+}
+
+.page__current {
+  border: .2rem solid orange;
+  font-weight: bold;
+}
+
+.navbar {
+  height: 5rem;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  padding: 0 1.5rem;
+  background: lightslategray;
+}
+
+.navbar__links {
+  margin-left: auto;
+}
